NMS-20286: Review fixes: test-only fake agent, pristine-only reset, Definition equality, isolated IT home !smoke
The fake WS-Man agent moves to tests/mock-wsman-agent, a JDK-only jar, so
the wsman feature bundle no longer imports com.sun.net.httpserver and Minion
keeps resolving; the smoke test copies that jar into the container instead of
running it from lib/. The feature pom no longer copies base-assembly files
into the bundle: reset-to-defaults reads share/etc-pristine only and answers
409 on installs without it, so an unfiltered placeholder can never be written
into etc/. Definition.equals/hashCode include requisition (and productVersion
in the hash). The REST IT points opennms.home and the poller factory at a
scratch copy for the duration of each test and reloads the discovery and
poller singletons from the tracked files afterwards.